Update README.md
Added section How to use.